Basic functionality in development server.

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Your shortly URL: </h1>
 <br>
-<h4><em>www.shortly.com/<%= @site.id %></em></h4>
+<h4><em>www.shortly.com/<%= @sites.id %></em></h4>
