Design of index page.

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Your shortly URL: </h1>
+<h4><em>www.ortly.herokuapp.com/sites/<%= @sites.id %></em></h4>
 <br>
-<h4><em>www.shortly.com/<%= @sites.id %></em></h4>
+link_to 'Go Now!', site
