--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,4 +1,4 @@
 <h1>Your shortly URL: </h1>
 <h4><em>www.ortly.herokuapp.com/sites/<%= @site.id %></em></h4>
 <br>
-<%= link_to 'Go Now!', site_path(:id => @site.id) %>
+<%= link_to 'Go Now!', @site.name %>
