--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Enter a longly URL:</h1>
-<%= form_for @site do |f| %>
-<%=  f.text_field :name %>
-<%= f.submit 'Get your shortly URL'%>
-<% end %>
+<div>
+  <h1>Enter a longly URL:</h1>
+  <%= form_for @site do |f| %>
+  <%=  f.text_field :name %>
+  <%= f.submit 'Get your shortly URL'%>
+  <% end %>
+</div>
