--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,7 +1,9 @@
-<h1>All the Shortlies</h1>
+<div>
+  <h1>All the Shortlies</h1>
 
-<ol>
-<% @site.each do |s| %>
-<li><%= s.name %></li>
-<% end %>
-</ol>
+  <ol>
+    <% @site.each do |s| %>
+    <li><%= s.name %></li>
+    <% end %>
+  </ol>
+</div>
