--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All the Shortlies</h1>
 
   <ol>
-    <% @site.each do |s| %>
+    <% @sites.each do |s| %>
     <li><%= s.name %></li>
     <% end %>
   </ol>
