--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+table {
+  display: flex;
+  flex-direction: column;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
