--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -9,9 +9,10 @@
 
 
     <% @sites.each do |s| %>
+      current = <%= "www.ortly.herokuapp.com/#{s.id}" %>
      <tr>
       <td><%= s.name[0,40] %>...</td>
-      <td>www.ortly.herokuapp.com/<%= s.id %></td>
+      <td><a href=current>www.ortly.herokuapp.com/<%= s.id %></a></td>
      </tr>
     <% end %>
 
