--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -9,10 +9,10 @@
 
 
     <% @sites.each do |s| %>
-      
+
      <tr>
       <td><%= s.name[0,40] %>...</td>
-      <td><a href=<%= "www.ortly.herokuapp.com/#{s.id}" %>>www.ortly.herokuapp.com/<%= s.id %></a></td>
+      <td><a href=<%= s.name %>>www.ortly.herokuapp.com/<%= s.id %></a></td>
      </tr>
     <% end %>
 
