--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,6 +1,7 @@
 <div class = "show">
-<h1>All the Shortlies</h1>
-
+<div>
+  <h1>All the Shortlies</h1>
+</div>
 <table style="width: 100%">
   <tr>
     <th>Longly</th>
